@@ -1,11 +1,15 @@
 plugins {
     id 'application'
     id 'eclipse'
-    id 'net.ltgt.apt-eclipse'
+    id 'com.diffplug.eclipse.apt'
     id 'org.beryx.runtime' version '1.11.4'    
 }
 
 mainClassName = 'io.netlibs.ami.pump.Main'
+
+// 
+
+
 
 apply from: "${rootDir}/gradle/eclipse.gradle"
 
@@ -14,54 +18,42 @@ repositories {
   
 }
 
+application {
+  applicationDefaultJvmArgs = ['--illegal-access=permit', '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED']
+}
+
 runtime {
-    options = [ '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages' ]
-    modules = [ 'jdk.crypto.ec','java.desktop', 'java.prefs', 'java.logging', 'jdk.unsupported', 'java.xml', 'java.sql', 'java.naming', 'java.management' ]
-    
-    
-    // https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.2%2B12/OpenJDK14U-jdk_arm_linux_hotspot_14.0.2_12.tar.gz
-    
+  options = [ '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages' ]
+  modules = [ 'jdk.crypto.ec','java.desktop', 'java.prefs', 'java.logging', 'jdk.unsupported', 'java.xml', 'java.sql', 'java.naming', 'java.management' ]
   targetPlatform("linux-x64") {
     jdkHome = jdkDownload('https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.2%2B12/OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz') {
       archiveExtension = "tar.gz"
     }
-  }
-
-/*
-  targetPlatform('mac-x64') {
-    jdkHome = jdkDownload('https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.2%2B12/OpenJDK14U-jdk_x64_mac_hotspot_14.0.2_12.tar.gz') {
-      downloadDir = "$buildDir/mac-x64"
-      archiveName = "mac-x64-jdk"
-      archiveExtension = "tar.gz"
-      pathToHome = "jdk-14.0.1+7/Contents/Home"
-      overwrite = true
-    }
-  }
-*/  
-    
-        
+  }     
 }
 
-dependencies { 
-  annotationProcessor 'org.immutables:value:2.8.8'
-  compileOnly 'org.immutables:value-annotations:2.8.8'
-  implementation 'org.slf4j:slf4j-api:1.7.30'
+dependencies {
+ 
   implementation platform('io.netty:netty-bom:4.1.54.Final')
   implementation platform('software.amazon.awssdk:bom:2.15.28')
+  implementation platform('com.fasterxml.jackson:jackson-bom:2.11.3')
+
+  annotationProcessor 'org.immutables:value:2.8.8'
+  compileOnly 'org.immutables:value-annotations:2.8.8'
+  
   implementation 'software.amazon.awssdk:auth'
   implementation 'software.amazon.awssdk:sts'
   implementation 'software.amazon.awssdk:sns'
   implementation 'software.amazon.awssdk:kinesis'
-  implementation 'software.amazon.kinesis:amazon-kinesis-client:2.3.1'
   implementation 'software.amazon.awssdk:netty-nio-client'
+  implementation 'software.amazon.kinesis:amazon-kinesis-client:2.3.1'
   implementation 'info.picocli:picocli:4.5.2'  
   implementation 'net.openhft:chronicle-queue:5.20.110'
+  
 }
-
 
 dependencies {
   implementation 'org.ini4j:ini4j:0.5.4'
-  implementation platform('com.fasterxml.jackson:jackson-bom:2.11.3')
   implementation 'com.fasterxml.jackson.core:jackson-annotations'
   implementation 'com.fasterxml.jackson.core:jackson-databind'
   implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
@@ -73,10 +65,8 @@ dependencies {
 dependencies {
   implementation project(':client')
   implementation 'com.google.guava:guava:30.0-jre'  
-  implementation 'javax.xml.bind:jaxb-api:2.3.1'
-  implementation 'io.reactivex.rxjava3:rxjava:3.0.7'
-  runtime 'ch.qos.logback:logback-classic:1.2.3'
-  
+  implementation 'org.slf4j:slf4j-api:1.7.30'
+  runtimeOnly 'org.slf4j:slf4j-simple:1.7.30'  
 }
 
 
